samples/_failures_safe/1761276859_9d01f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e1c3211.c: In function ‘main’:
./samples/SAFE/__tmp_2e1c3211.c:164:20: error: missing terminating " character
  164 |             printf("Minimum point distance
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2e1c3211.c:164:13: error: expected expression at end of input
  164 |             printf("Minimum point distance
      |             ^~~~~~
./samples/SAFE/__tmp_2e1c3211.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e1c3211.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e1c3211.c:164:13: error: expected declaration or statement at end of input
